feat: github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://your-username.github.io/your-repository",
+  "homepage": "https://Astx1999.github.io/interactive-map-task",
   "name": "interactive-map-task",
   "version": "0.1.0",
   "private": true,
